// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test with flat and empty files: - two non-empty flat JSON files 1`] = `
"{
  - date:1997-08-31
  + differentDate:1998-12-18
  - differentValueFloat:99.117
  + differentValueFloat:65.635
  - onlyFirstFileInteger:28
    sameOnBothBool:true
  + secondFileOnly_Country:Austria
}"
`;

exports[`Test with flat and empty files: - two non-empty flat YAML files 1`] = `
"{
  - bigValue:-1013740662
  + biggestValue:21231013740662
  - differentValueFloat:-17886065.431222
  + differentValueFloat:181265.43322
  - integetValue:4232907
  + integetValue:423207
  - notSameBool:true
  - null:
  - onlyFirstFileInteger:213123444
    sameOnBothBool:true
  + secondFileOnly_Country:Austria
}"
`;

exports[`Test with flat and empty files: - two non-empty flat YAML files with different extensions 1`] = `
"{
  - bigValue:-1013740662
  - differentValueFloat:-17886065.431222
  + differentValueFloat:181265.43322
  - integetValue:4232907
  + integetValue:423207
  - notSameBool:true
  - null:
  + null:notnull
  - onlyFirstFileInteger:213123444
    sameOnBothBool:true
  + val1:-1013740662
}"
`;
